Fix unreleased regression - ellipsis on span name
Add back the styling that adds an ellipsis to truncated span name text.

--- a/src/components/TracePage/TraceTimelineViewer/SpanBarRow.css
+++ b/src/components/TracePage/TraceTimelineViewer/SpanBarRow.css
@@ -46,6 +46,11 @@ THE SOFTWARE.
   z-index: 1;
 }
 
+.span-name-wrapper {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .span-name {
   outline: none;
   color: #000;
